fix handlers, fix swagger, add sql transaction
